--- a/templates/base.html
+++ b/templates/base.html
@@ -90,7 +90,7 @@
 
 					</ul>
 					<div class="col-lg-12 col-md-12 text-center">
-						<h1 id="fh5co-logo"><a href="">Catalog Item App </a></h1>
+						<h1 id="fh5co-logo"><a href="{{url_for('showCategory')}}">Catalog Item App </a></h1>
 					</div>
 
 				</div>
@@ -121,7 +121,7 @@
 
 
     <!-- Show Menu Content for specific Restaurant -->
-    {% block menu %}
+    {% block Items %}
     {% endblock %}
 
 	    <!-- Public Menu Page -->
