--- a/templates/category.html
+++ b/templates/category.html
@@ -25,7 +25,7 @@
 					<!--<figure>-->
 						<!--<a href="single.html"><img src="images/pic_1.jpg" alt="Image" class="img-responsive"></a>-->
 					<!--</figure>-->
-					<h2 class="fh5co-article-title"><a href="">
+					<h2 class="fh5co-article-title"><a href="{{url_for('catalogItemList', category_id = categorie.id)}}">
 						{{categorie.name}}</a>
 					</h2>
 					<!-- 
