--- a/templates/base.html
+++ b/templates/base.html
@@ -61,7 +61,7 @@
 				<div class="fh5co-box">
 					<h3 class="heading">Contribute</h3>
 					<ul>
-						<li><a href="">Add new Restaurant</a></li>
+						<li><a href="{{url_for('newCategory')}}">Add new Category</a></li>
 					</ul>
 				</div>
 				<div class="fh5co-box">
@@ -107,8 +107,8 @@
 		{% block publicRestaurants %}
     	{% endblock %}
 
-    <!-- Add New Restaurant Page -->
-    {% block newRestaurant %}
+    <!-- Add New Categories Page -->
+    {% block newCategory %}
     {% endblock %}
 
     <!-- Edit existing Restaurant -->
