Refactor: Add Delete and Edit to Category , render templates and update database successfully

--- a/templates/base.html
+++ b/templates/base.html
@@ -111,12 +111,12 @@
     {% block newCategory %}
     {% endblock %}
 
-    <!-- Edit existing Restaurant -->
-    {% block editRestaurant %}
+    <!-- Edit existing Category -->
+    {% block editCategory %}
     {% endblock %}
 
-    <!-- Delete existing Restaurant -->
-    {% block deleteRestaurant %}
+    <!-- Delete existing Category -->
+    {% block deleteCategory %}
     {% endblock %}
 
 
