--- a/templates/category.html
+++ b/templates/category.html
@@ -20,23 +20,22 @@
 
 			<!--Main Restaurant Items-->
 			<div class="row fh5co-post-entry">
-				{% for categorie in categories %}
+				{% for category in categories %}
 				<article class="col-lg-3 col-md-3 col-sm-3 col-xs-6 col-xxs-12 animate-box">
 					<!--<figure>-->
 						<!--<a href="single.html"><img src="images/pic_1.jpg" alt="Image" class="img-responsive"></a>-->
 					<!--</figure>-->
-					<h2 class="fh5co-article-title"><a href="{{url_for('catalogItemList', category_id = categorie.id)}}">
-						{{categorie.name}}</a>
+					<h2 class="fh5co-article-title"><a href="{{url_for('catalogItemList', category_id = category.id)}}">
+						{{category.name}}</a>
 					</h2>
-					<!-- 
-					<span class="fh5co-meta fh5co-date"><a href = "">
-						Edit Restaurant</a>
-					</span>
-					<h4> <span class="fh5co-meta"><a class="fh5co-date" href="">
-						Delete Restaurant</a>
-					</span></h4>
-
-					-->
+						<span class="fh5co-meta fh5co-date"><a href = "{{url_for('editCategory', category_id = category.id)}}">
+							Edit Category</a>
+						</span>
+					<h4>
+						<span class="fh5co-meta"><a class="fh5co-date" href="{{url_for('deleteCategory', category_id = category.id)}}">
+							Delete Category</a>
+						</span>
+					</h4>
 				</article>
 				{% endfor %}
 			</div>
