Feat: Add new item to a catalog and render our template successfully

--- a/templates/base.html
+++ b/templates/base.html
@@ -120,7 +120,7 @@
     {% endblock %}
 
 
-    <!-- Show Menu Content for specific Restaurant -->
+    <!-- Show Item Content for specific Category -->
     {% block Items %}
     {% endblock %}
 
@@ -128,15 +128,15 @@
     	{% block publicMenu %}
     	{% endblock %}
 
-    <!-- Add New Menu Item on a Restaurant Page -->
-    {% block newMenuItem %}
+    <!-- Add New Item on a Category Page -->
+    {% block newItem %}
     {% endblock %}
 
-    <!-- Edit existing Menu Item on a Restaurant Page -->
+    <!-- Edit existing Item on a Category Page -->
     {% block editMenuItem %}
     {% endblock %}
 
-    <!-- Delete existing Menu Item on a Restaurant Page -->
+    <!-- Delete existing Item on a Category Page -->
     {% block deleteMenuItem %}
     {% endblock %}
 
