Feat: Add Edit and Delete to Catalog Items, update db and render html pages successfully

--- a/templates/base.html
+++ b/templates/base.html
@@ -133,11 +133,11 @@
     {% endblock %}
 
     <!-- Edit existing Item on a Category Page -->
-    {% block editMenuItem %}
+    {% block editItem %}
     {% endblock %}
 
     <!-- Delete existing Item on a Category Page -->
-    {% block deleteMenuItem %}
+    {% block deleteItem %}
     {% endblock %}
 
 	<!-- Logout Page -->
