Refactor: Add route for login page on base template

--- a/templates/base.html
+++ b/templates/base.html
@@ -52,7 +52,7 @@
 					<ul>
 						<!--Log in / Sign up Button-->
 						<li class="log-in-icon">
-							<a href="" class="btn btn-primary">
+							<a href="{{url_for('showLogin')}}" class="btn btn-primary">
                                 Login / Sign up
 							</a>
 						</li>
