Refactor: Add Local Permission, showing public Catalog page when user not logged in and on home screen

--- a/templates/base.html
+++ b/templates/base.html
@@ -103,8 +103,8 @@
 	{% block categories %}
     {% endblock %}
 
-	<!-- Public Restaurant Page -->
-		{% block publicRestaurants %}
+	<!-- Public Catalog Page -->
+		{% block publicCatalog %}
     	{% endblock %}
 
     <!-- Add New Categories Page -->
@@ -124,8 +124,8 @@
     {% block Items %}
     {% endblock %}
 
-	    <!-- Public Menu Page -->
-    	{% block publicMenu %}
+	    <!-- Public Item Page -->
+    	{% block publicItems %}
     	{% endblock %}
 
     <!-- Add New Item on a Category Page -->
