--- a/templates/editCategory.html
+++ b/templates/editCategory.html
@@ -1,5 +1,11 @@
 {% extends "base.html" %}
 
+		<!--Header Sign Out Button-->
+		{% block sign %}
+			<li><a href="{{url_for('disconnect')}}"><i class="fa fa-sign-out" aria-hidden="true"></i>Signout</a></li>
+		{% endblock %}
+
+
 
 {% block editCategory %}
 
