Feat: Edit Item Description and render, update db successfully

--- a/templates/base.html
+++ b/templates/base.html
@@ -132,8 +132,12 @@
     {% block newItem %}
     {% endblock %}
 
-    <!-- Edit existing Item on a Category Page -->
+    <!-- Edit existing Item Name on a Category Page -->
     {% block editItem %}
+    {% endblock %}
+
+	<!-- Edit existing Item Description on a Category Page -->
+    {% block editItemDescription %}
     {% endblock %}
 
     <!-- Delete existing Item on a Category Page -->
