--- a/templates/editItem.html
+++ b/templates/editItem.html
@@ -4,14 +4,17 @@
 {% block editItem %}
 
     <div class="col-md-12 text-center">
-        <h1>Edit Catalog Item</h1>
+        <h1>Edit Catalog Item Name</h1>
 
-        <form action="{{url_for('editItem', category_id=category_id, item_id=item.id )}}" method = 'POST'>
+        <form action="{{url_for('editItem', category_id=category_id, item_id=item.id )}}" method = 'POST' id="editItemform">
             <p>Name:</p>
-            <input type='text' size='30' name='name' placeholder="{{item.name}}">
-            <input type='submit' value='Edit' class="btn btn-warning">
+                <input type='text' size='30' name='name' placeholder="{{item.name}}">
+            <br>
+            <br>
+                <input type='submit' value='Edit' class="btn btn-warning">
             <a href="{{url_for('catalogItemList', category_id=item.category_id)}}">Cancel</a>
         </form>
+        
     </div>
 
 {% endblock %}
