Feat: Add Signout button for disconnect / log out on CRUD Item Pages Refactor: Turn input box into textarea field on edit Item Description html

--- a/templates/editItemDes.html
+++ b/templates/editItemDes.html
@@ -1,5 +1,10 @@
 {% extends "base.html" %}
 
+		<!--Header Sign Out Button-->
+		{% block sign %}
+			<li><a href="{{url_for('disconnect')}}"><i class="fa fa-sign-out" aria-hidden="true"></i>Signout</a></li>
+		{% endblock %}
+
 
 {% block editItemDescription %}
 
@@ -8,7 +13,8 @@
 
         <form action="{{url_for('editItemDes', category_id=category_id, item_id=item.id )}}" method = 'POST' id="editItemDesform">
             <p>Description:</p>
-                <input type='text' name='description' placeholder="{{item.description}}">
+                <textarea type="text" rows="3" cols="40" name='description' placeholder="{{item.description}}">
+                </textarea>
             <br>
                 <input type='submit' value='Edit' class="btn btn-warning">
             <a href="{{url_for('catalogItemList', category_id=item.category_id)}}">Cancel</a>
