--- a/templates/login.html
+++ b/templates/login.html
@@ -159,10 +159,10 @@
 
                 <div class="row omb_row-sm-offset-3">
                     <div class="col-xs-12 col-sm-6">
-                        <form class="omb_loginForm" action="" autocomplete="off" method="POST">
+                        <form class="omb_loginForm" action="/login" method="POST">
                             <div class="input-group">
                                 <span class="input-group-addon"><i class="fa fa-user"></i></span>
-                                <input type="text" class="form-control" name="username" placeholder="email address">
+                                <div>{{ form.username.label }}: {{ form.username(class="form-control") }}</div>
                             </div>
                             <span class="help-block"></span>
 
