--- a/templates/login.html
+++ b/templates/login.html
@@ -36,6 +36,90 @@
 <body>
 
 
+	<!-- Facebook Log in Script -->
+	<script>
+
+        // This is called with the results from from FB.getLoginStatus().
+        function statusChangeCallback(response) {
+            console.log('statusChangeCallback');
+            console.log(response);
+            // The response object is returned with a status field that lets the
+            // app know the current login status of the person.
+            // Full docs on the response object can be found in the documentation
+            // for FB.getLoginStatus().
+            if (response.status === 'connected') {
+                // Logged into your app and Facebook.
+                testAPI();
+            } else {
+                // The person is not logged into your app or we are unable to tell.
+                document.getElementById('status').innerHTML = 'Please log ' +
+                    'into this app.';
+            }
+        }
+
+        // This function is called when someone finishes with the Login
+        // Button.  See the onlogin handler attached to it in the sample
+        // code below.
+        function checkLoginState() {
+            FB.getLoginStatus(function(response) {
+                statusChangeCallback(response);
+            });
+        }
+
+	  window.fbAsyncInit = function() {
+		FB.init({
+		  appId      : '141704329783894',
+		  cookie     : true,
+		  xfbml      : true,
+		  version    : 'v2.8'
+		});
+		FB.AppEvents.logPageView();
+	  };
+
+	  (function(d, s, id){
+		 var js, fjs = d.getElementsByTagName(s)[0];
+		 if (d.getElementById(id)) {return;}
+		 js = d.createElement(s); js.id = id;
+		 js.src = "//connect.facebook.net/en_US/sdk.js";
+		 fjs.parentNode.insertBefore(js, fjs);
+	   }(document, 'script', 'facebook-jssdk'));
+
+      // Here we run a very simple test of the Graph API after login is
+      // successful.  See statusChangeCallback() for when this call is made.
+      function sendTokenToServer() {
+          var access_token = FB.getAuthResponse()['accessToken'];
+          console.log(access_token);
+          console.log('Welcome!  Fetching your information.... ');
+          FB.api('/me', function(response) {
+              console.log('Successful login for: ' + response.name);
+              $.ajax({
+                  type: 'POST',
+                  url: '/fbconnect?state={{STATE}}',
+                  processData: false,
+                  data: access_token,
+                  contentType: 'application/octet-stream; charset=utf-8',
+                  success: function(result) {
+                      // Handle or verify the server response if necessary.
+                      if (result) {
+                          // Hide the sign-in button now that the user is authorized
+                          $('#signInButton').toggle();
+                          $('#fbLogin').toggle();
+                          $('#result').html(result + '</br><h2>Redirecting...</h2>')
+                          setTimeout(function() {
+                              window.location.href = "/catalog";
+                          }, 0500);
+                      } else {
+                          $('#result').html('Failed to make a server-side call. Check your configuration and console.');
+                      }
+                  }
+              });
+          });
+      }
+
+	</script>
+    <!-- / End of Facebook Log in Script-->
+
+
 	<!--Hamburger Menu-->
 	<div id="fh5co-offcanvas">
 			<a href="#" class="fh5co-close-offcanvas js-fh5co-close-offcanvas"><span><i class="fa fa-window-close"></i> <span>Close</span></span></a>
@@ -120,17 +204,26 @@
 
             <div class="omb_login">
 				<h3 class="omb_authTitle">Login or Sign up to Add <a href="{{url_for('showCategory')}}">Catalogs</a> and Items.</h3>
+                <div class="row omb_row-sm-offset-3 omb_socialButtons text-center">
+                    <!--<span class="zocial facebook"-->
+                          <!--id="fbLogin"-->
+                          <!--scope="public_profile,email"-->
+                          <!--onlogin="sendTokenToServer();">-->
+                        <!--<i class="fa fa-facebook visible-xs"></i>-->
+                        <!--<span class="hidden-xs">Continue with Facebook</span>-->
+					<!--</span>-->
 
-                <!--
-                    <div class="row omb_row-sm-offset-3 omb_socialButtons text-center">
-                        <span class="zocial facebook"
-                            id="fbLogin"
-                            scope="public_profile,email"
-                            onlogin="sendTokenToServer();">
-                            <i class="fa fa-facebook visible-xs"></i>
-                            <span class="hidden-xs">Continue with Facebook</span>
-                        </span>
+                    <fb:login-button id="fbLogin" scope="public_profile,email" onlogin="sendTokenToServer();">
+                        <a href='javascript:sendTokenToServer()'>Continue with Facebook</a>
+                    </fb:login-button>
+                
                     <br>
+                    <!--<div class="col-xs-4 col-sm-2">-->
+                        <!--<a href="#" class="btn btn-lg btn-block omb_btn-twitter">-->
+                            <!--<i class="fa fa-twitter visible-xs"></i>-->
+                            <!--<span class="hidden-xs">Twitter</span>-->
+                        <!--</a>-->
+                    <!--</div>-->
                     <br>
                     <div id="signinButton">
                         <span class="zocial googleplus g-signin"
@@ -154,8 +247,6 @@
                         <span class="omb_spanOr">or</span>
                     </div>
                 </div>
-
-                -->
 
                 <div class="row omb_row-sm-offset-3">
                     <div class="col-xs-12 col-sm-6">
@@ -201,6 +292,41 @@
 		<p><small>&copy; 2017 <a href="https://github.com/Christianq010/" target="_blank">Christiaan Quyn</a>. <br> Fork me on Github <a href="https://github.com/Christianq010/vagrant-box-Intro-to-relational-DB" target="_blank">here</a>. All Rights Reserverd.</small></p>
 	</footer>
 
+
+        <!--Google OAuth Script-->
+        <script>
+            function signInCallback(authResult) {
+
+              if (authResult['code']) {
+
+                // Hide the sign-in button now that the user is authorized
+                $('#signinButton').attr('style', 'display: none');
+
+                // Send the one-time-use code to the server, if the server responds, write a 'login successful' message to the web page and then redirect back to the main restaurants page
+                $.ajax({
+                  type: 'POST',
+                  url: '/gconnect?state={{STATE}}',
+                  processData: false,
+                  data: authResult['code'],
+                  contentType: 'application/octet-stream; charset=utf-8',
+                  success: function(result) {
+
+                    // Handle or verify the server response if necessary.
+                    if (result) {
+                      $('#result').html('Login Successful!</br>'+ result + '</br>Redirecting...')
+                     setTimeout(function() {
+                      window.location.href = "/catalog";
+                     }, 0500);
+
+                  } else if (authResult['error']) {
+                console.log('There was an error: ' + authResult['error']);
+              } else {
+                    $('.result').html('Failed to make a server-side call. Check your configuration and console.');
+                     }
+                  }
+
+              }); } }
+    </script>
 
 	<!-- jQuery -->
     <script type="text/javascript" src="{{ url_for('static', filename='jquery.min.js') }}"></script>
